refactor(api): luse version tokens instead of file hash for ETag caching
